# trackdlo_perception

./: .gitignore  API.ja.md  API.md  CLAUDE.md  README.ja.md  README.md  index.html
.github/workflows/: build.yml  release-deb.yml
docker/: Dockerfile.base  Dockerfile.core  Dockerfile.gazebo  Dockerfile.moveit  Dockerfile.perception  Dockerfile.realsense  Dockerfile.sam2  build.sh  docker-compose.nvidia.yml  docker-compose.realsense.nvidia.yml  docker-compose.realsense.yml  docker-compose.yml  run.sh
docs/superpowers/plans/: 2026-04-02-trackdlo-ros2-implementation.md  2026-04-03-librealsense-integration.md  2026-04-03-sam2-segmentation.md
docs/superpowers/specs/: 2026-04-01-trackdlo-ros2-design.md  2026-04-02-code-quality-design.md  2026-04-02-phase2-bloom-ci-design.md  2026-04-02-testing-design.md  2026-04-03-librealsense-integration-design.md  2026-04-03-sam2-segmentation-design.md
humble/: Packages  Release  ros-humble-trackdlo-core_2.0.0-0jammy_amd64.deb  ros-humble-trackdlo-msgs_2.0.0-0jammy_amd64.deb
trackdlo_bringup/: CMakeLists.txt  package.xml
trackdlo_bringup/config/: realsense_params.yaml  trackdlo_params.yaml
trackdlo_bringup/launch/: camera.launch.py  evaluation.launch.py  full_pipeline.launch.py  realsense_test.launch.py  sim_full_pipeline.launch.py  trackdlo.launch.py  ur5_gazebo.launch.py  visualize_output.launch.py
trackdlo_bringup/rviz/: tracking.rviz
trackdlo_bringup/test/: test_launch.py
trackdlo_bringup/worlds/: dlo_workspace.sdf
trackdlo_core/: CMakeLists.txt  package.xml
trackdlo_core/include/trackdlo_core/: evaluator.hpp  image_preprocessor.hpp  pipeline_manager.hpp  pointcloud_cuda.cuh  trackdlo.hpp  utils.hpp  visibility_checker.hpp  visualizer.hpp
trackdlo_core/src/: evaluator.cpp  image_preprocessor.cpp  pipeline_manager.cpp  pointcloud_cuda.cu  run_evaluation.cpp  trackdlo.cpp  trackdlo_node.cpp  utils.cpp  visibility_checker.cpp  visualizer.cpp
trackdlo_core/test/: test_image_preprocessor.cpp  test_trackdlo.cpp  test_visibility_checker.cpp
trackdlo_core/trackdlo_core/: __init__.py  initialize.py  utils.py
trackdlo_description/: CMakeLists.txt  package.xml
trackdlo_description/urdf/: camera_mount.urdf.xacro  realsense_d435.urdf.xacro  ur5_workspace.urdf.xacro
trackdlo_moveit/: CMakeLists.txt  package.xml
trackdlo_moveit/config/: ur5_controllers.yaml
trackdlo_moveit/include/trackdlo_moveit/: dlo_manipulation_node.hpp
trackdlo_moveit/launch/: moveit_planning.launch.py
trackdlo_moveit/src/: dlo_manipulation_node.cpp
trackdlo_msgs/: CMakeLists.txt  package.xml
trackdlo_msgs/msg/: TrackingStatus.msg
trackdlo_msgs/srv/: SetPrompt.srv
trackdlo_perception/: CMakeLists.txt  package.xml
trackdlo_perception/include/trackdlo_perception/: evaluator.hpp  image_preprocessor.hpp  pipeline_manager.hpp  pointcloud_cuda.cuh  utils.hpp  visibility_checker.hpp  visualizer.hpp
trackdlo_perception/scripts/: init_tracker
trackdlo_perception/src/: evaluator.cpp  image_preprocessor.cpp  pipeline_manager.cpp  pointcloud_cuda.cu  run_evaluation.cpp  trackdlo.cpp  trackdlo_node.cpp  utils.cpp  visibility_checker.cpp  visualizer.cpp
trackdlo_perception/trackdlo_perception/: initialize.py
trackdlo_segmentation/: package.xml  setup.py
trackdlo_segmentation/test/: test_base.py  test_hsv_node.py
trackdlo_segmentation/trackdlo_segmentation/: __init__.py  base.py  hsv_node.py  sam2_node.py
trackdlo_utils/: package.xml  setup.cfg  setup.py
trackdlo_utils/test/: test_import.py
trackdlo_utils/trackdlo_utils/: __init__.py  collect_pointcloud.py  color_picker.py  composite_view_node.py  depth_format_converter.py  hsv_tuner_node.py  mask.py  param_tuner_node.py  sam2_segmentation_node.py  simulate_occlusion.py  simulate_occlusion_eval.py  tracking_result_img_from_pointcloud_topic.py  tracking_test.py
